[project]
name = "safety-utility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "huggingface-hub>=1.21.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "tokenizers>=0.22.2",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]
